Added First Section

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     
+    <div class="section1">
         <div class="header">
-            <div>Header Logo</div>
+            <div class="logo">Header Logo</div>
             <div class="headerlinks">
                 <a>header link one</a>
                 <a>header link two</a>
@@ -18,14 +19,17 @@
     
         </div>
 
-        <div class="section1">
-
-            <div>This website is awesome</div>
-            <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis, unde ducimus porro voluptatibus sit harum sunt in voluptatem quia accusamus ea. Sint, autem culpa facere omnis rem ipsam dolore repellendus.</div>
-            <button type="button">Sign up</button>
+        <div class="hook">
+            <div class="hook-desc">
+                <div class="cap">This website is awesome</div>
+                <div class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis, unde ducimus porro voluptatibus sit harum sunt in voluptatem quia accusamus ea. Sint, autem culpa facere omnis rem ipsam dolore repellendus.</div>
+                <button type="button">Sign up</button>
+            </div>
 
             <img src="img/placeholder.webp">
         </div>
+    </div>
+
 
 
 
