--- a/index.html
+++ b/index.html
@@ -32,12 +32,38 @@
 
 
 
+    <div class="header2">Some random information.</div>
 
-        <div>Some random information</div>
-        <div>this is some subtext under an illustration of image</div>
-        <div>this is some subtext under an illustration of image</div>
-        <div>this is some subtext under an illustration of image</div>
-        <div>this is some subtext under an illustration of image</div>
+    <div class="infotext">
+
+        <div class="info">
+            <div class="img first">
+                <img src="img/placeholder.webp">
+                <div class="text">this is some subtextunder an illustration of image</div>
+            </div>
+
+            <div class="img second">
+                <img src="img/placeholder.webp">
+                <div class="text">this is some subtext under an illustration of image</div>
+            </div>
+
+            <div class="img third">
+                <img src="img/placeholder.webp">
+                <div class="text">this is some subtext under an illustration of image</div>
+            </div>
+
+            <div class="img fourth">
+                <img src="img/placeholder.webp">
+                <div class="text">this is some subtext under an illustration of image</div>
+            </div>
+        </div>
+
+
+
+    </div>
+
+
+
 
 
         <div class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe officia aliquid repudiandae at asperiores eligendi laborum delectus recusandae nostrum vitae omnis qui iure rerum voluptatem ullam consectetur nisi, maxime error!</div>
