--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="info">
             <div class="img first">
                 <img src="img/placeholder.webp">
-                <div class="text">this is some subtextunder an illustration of image</div>
+                <div class="text">this is some subtext under an illustration of image</div>
             </div>
 
             <div class="img second">
@@ -63,10 +63,13 @@
     </div>
 
 
+    <div class="quotecontainer">
+        <div class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe officia aliquid repudiandae at asperiores eligendi laborum delectus recusandae nostrum vita</div>
+    </div>
 
-
-
-        <div class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe officia aliquid repudiandae at asperiores eligendi laborum delectus recusandae nostrum vitae omnis qui iure rerum voluptatem ullam consectetur nisi, maxime error!</div>
+    <div class="personcontainer">
+        <div class="person">-Thor, God of Thunder</div>
+    </div>
 
         <div class="call">
             <div>Call to action! Its time!</div>
