Finished final section.
Landing page is now almost identical to project demonstration.

--- a/index.html
+++ b/index.html
@@ -71,24 +71,27 @@
         <div class="person">-Thor, God of Thunder</div>
     </div>
 
-        <div class="call">
-            <div>Call to action! Its time!</div>
-            <div>Sign up for our product by clicking that button right over there</div>
-            <button type="button">Sign up</button>
 
-        </div>
+
+    <div class="call">
+            <div class="message">
+                <div>
+                    <div>Call to action! Its time!</div>
+                    <div class="smaller-text">Sign up for our product by clicking that button right over there</div>
+                </div>
+
+                <div class="buttoncontainer">
+                    <button type="button">Sign up</button>
+                </div>
+            </div>
+
+
+    </div>
 
 
 
 
             
-
-
-
-
-
-
-
 
 
 
